--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     </div>
     <div class="slider">
         <div class="text">Japanese foods </div>
+        <div class="btn">
+            Orther Now
+            <div class="bag"><i class="ti-bag"></i></div>
+        </div>
     </div>
     <div class="content">
         <div class="cap">
